--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
+    "usehooks-ts": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
