--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.5.3",
     "@mui/styled-engine-sc": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.3",
@@ -17,7 +18,6 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
-    "usehooks-ts": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
