--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://ali80-sys.github.io/Ali-Oliaee/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
