--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
+    "i18next": "^21.6.14",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass": "^1.49.10",
