--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-i18next": "^11.16.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-smooth-list": "^1.0.2",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
