--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-smooth-list": "^1.0.2",
+    "react-tsparticles": "^1.43.0",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
+    "tsparticles": "^1.43.0",
+    "tsparticles-preset-triangles": "^1.43.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
