--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-tsparticles": "^1.43.0",
     "sass": "^1.49.10",
     "styled-components": "^5.3.5",
+    "swiper": "^8.2.5",
     "tsparticles": "^1.43.0",
     "tsparticles-preset-triangles": "^1.43.0",
     "web-vitals": "^2.1.4"
