--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "homepage": "https://alioliaee.iran.liara.run/",
+  "license": "UNLICENSED",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
