--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.2",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-smooth-list": "^1.0.2",
