--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "react/prop-types": "off",
         "object-curly-newline": 0,
         "global-require": 0,
+        "import/prefer-default-export": "off",
         "ObjectExpression": 0,
         "react/jsx-filename-extension": [
             1,
